--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-/* trnasition */
+/* transition */
 #fader {
 	position: fixed;
 	top: 0;
@@ -88,27 +88,27 @@ body {
 
 h1 {
 	font-family: Montserrat, sans-serif;
-	font-size: 25pt;
+	font-size: 20pt;
 	text-align: center;
 	color: #DF4343;
 }
 
 h2 {
 	font-family: Montserrat, sans-serif;
-	font-size: 20pt;
+	font-size: 18pt;
 	color: #373737;
 
 }
 
 h3 {
 	font-family: Montserrat, sans-serif;
-	font-size: 20pt;
+	font-size: 18pt;
 	color: #373737;
 	text-align: center;
 }
 
 p {
-	font-size: 18pt;
+	font-size: 16pt;
 	line-height: 1.5em;
 	color: #747474;
 }
@@ -155,11 +155,11 @@ ul.nav-list {
 
 ul.br3w-list {
 	list-style-type: decimal;
-	font-size: 18pt;
+	font-size: 16pt;
 }
 
 li {
-	font-size: 18pt;
+	font-size: 16pt;
 }
 
 li.nav-elem {
@@ -167,7 +167,7 @@ li.nav-elem {
 	text-decoration: none;
 	color: black;
 	margin: 1em;
-	font-size: 18pt;
+	font-size: 16pt;
 }
 
 a.head:link, a.head:visited {
@@ -206,7 +206,7 @@ img.art {
 	background-size: cover;
 	background-position: center center;
 	background-repeat: no-repeat;
-	height: 600px;
+	height: 400px;
 	display: block;
 	margin-bottom: 1.5em;
 	position: relative;
@@ -220,12 +220,12 @@ img.art {
 }
 
 .img-details h2 {
-	font-size: 20pt;
+	font-size: 18pt;
 	color: white;
 }
 
 .img-details p {
-	font-size: 18pt;
+	font-size: 16pt;
 	line-height: 0;
 	color: white;
 }
@@ -262,6 +262,7 @@ img.art {
 	width: 100%;
 }
 
+/*
 @media only screen and (min-width: 700px) {
 	h1 { font-size: 25pt; }
 
@@ -297,9 +298,10 @@ img.art {
 		margin: 1em;
 	}
 }
-
+*/
 
 @media only screen and (min-width: 800px) {
+	/*
 	h1 { font-size: 19pt; }
 
 	h2 { font-size: 17pt; }
@@ -317,8 +319,9 @@ img.art {
 	.img-details h2 { font-size: 17pt; }
 
 	.img-details p { font-size: 15pt; }
-
-	.img-bg { height: 550px; }
+	*/
+	
+	.img-bg { height: 450px; }
 
 	.art-row {
 		clear: both;
@@ -361,23 +364,23 @@ img.art {
 
 
 @media only screen and (min-width: 1140px) {
-	h1 { font-size: 17pt; }
+	h1 { font-size: 16pt; }
 
-	h2 { font-size: 16pt; }
+	h2 { font-size: 15pt; }
 
-	h3 { font-size: 16pt; }	
+	h3 { font-size: 15pt; }	
 
-	p { font-size: 14pt; }	
+	p { font-size: 13pt; }	
 
-	ul.br3w-list { font-size: 14pt; }
+	ul.br3w-list { font-size: 13pt; }
 
-	li { font-size: 14pt; }
+	li { font-size: 13pt; }
 
-	li.nav-elem { font-size: 14pt; }
+	li.nav-elem { font-size: 13pt; }
 
-	.img-details h2 { font-size: 16pt; }
+	.img-details h2 { font-size: 15pt; }
 
-	.img-details p { font-size: 14pt; }
+	.img-details p { font-size: 13pt; }
 
 	.img-bg { height: 500px; }
 
