--- a/style.css
+++ b/style.css
@@ -267,6 +267,8 @@ img.art {
 	clear: both;
 	max-width: 1040px;
 	margin: 0 auto;
+	padding-top: 1em;
+	padding-bottom: 1em;
 }
 
 .row-proj {
@@ -279,6 +281,9 @@ img.art {
 	padding: 2em;
 }
 
+.col {
+	padding: 1em;
+}
 .art-col {
 	flex: 100%;
 	max-width: 100%;
