--- a/src/App.css
+++ b/src/App.css
@@ -2,4 +2,14 @@
   background-color: #FFFBF0;
   min-height: 100vh;
   cursor: default;
+  display: flex;
+  flex-direction: column;
+
+
+}
+
+@media screen and (min-width: 800px){
+  .App{
+    align-items: center;
+  }
 }
