--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,7 @@
 @import url("https://fonts.googleapis.com/css?family=DM+Serif+Display");
 @import url("https://fonts.googleapis.com/css?family=Merriweather");
 @import url("https://fonts.googleapis.com/css?family=Poppins");
-@import url("https://fonts.googleapis.com/css?family=Open+Sans");
+@import url("https://fonts.googleapis.com/css?family=Open+Sans:regular,semi-bold");
 @import url("https://fonts.googleapis.com/css?family=Actor");
 @import url("https://fonts.googleapis.com/css?family=Abhaya+Libre");
 
