--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,14 @@
   flex-direction: column;
 }
 
+.MainBody {
+  background-color: #fffbf0;
+  cursor: default;
+  display: flex;
+  flex-direction: column;
+  min-height: 87vh;
+}
+
 @media screen and (min-width: 800px) {
   .App {
     align-items: center;
